better logging paper plugin 1.21